add link to online example

--- a/index.html
+++ b/index.html
@@ -411,6 +411,7 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
         </section>
         <section>
           <h2>HTML5-App</h2>
+          <a href="http://janschaefer.github.io/xpdays2015-example/">http://janschaefer.github.io/xpdays2015-example/</a>
           <a target="_blank" href="examplereport/index.html"><img height="400px" src="img/jgivenhtml5app2.png"/></a>
         </section>
         <section style="text-align:center">
