change font-size of link

--- a/index.html
+++ b/index.html
@@ -411,8 +411,8 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
         </section>
         <section>
           <h2>HTML5-App</h2>
-          <a href="http://janschaefer.github.io/xpdays2015-example/">http://janschaefer.github.io/xpdays2015-example/</a>
           <a target="_blank" href="examplereport/index.html"><img height="400px" src="img/jgivenhtml5app2.png"/></a>
+          <a style="font-size: 30px" href="http://janschaefer.github.io/xpdays2015-example/">http://janschaefer.github.io/xpdays2015-example/</a>
         </section>
         <section style="text-align:center">
               <h2>Klassisches BDD</h2>
