--- a/index.html
+++ b/index.html
@@ -447,6 +447,13 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
 
 
       </section>
+
+      <section>
+        <section data-background="img/keyboard.jpg">
+          <h1 style="background: none; border:none; box-shadow:none; -webkit-text-stroke: 3px black; font-size: 200px; color: white; text-shadow: 5px 5px 15px black">Demo</h1>
+        </section>
+      </section>
+
       <section>
         <section>
           <h1>Erste Schritte</h1>
