use coffeebeans instead of keyboard for demo

--- a/index.html
+++ b/index.html
@@ -449,8 +449,8 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
       </section>
 
       <section>
-        <section data-background="img/keyboard.jpg">
-          <h1 style="background: none; border:none; box-shadow:none; -webkit-text-stroke: 3px black; font-size: 200px; color: white; text-shadow: 5px 5px 15px black">Demo</h1>
+        <section data-background="img/coffeebeans.jpg">
+          <h1 style="opacity: 0.8; background: none; border:none; box-shadow:none; -webkit-text-stroke: 2px #555; font-size: 200px; color: white; text-shadow: 5px 5px 15px black">Demo</h1>
         </section>
       </section>
 
