add link to slides

--- a/index.html
+++ b/index.html
@@ -412,7 +412,7 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
         <section>
           <h2>HTML5-App</h2>
           <a target="_blank" href="examplereport/index.html"><img height="400px" src="img/jgivenhtml5app2.png"/></a>
-          <a style="font-size: 30px" href="http://janschaefer.github.io/xpdays2015-example/">http://janschaefer.github.io/xpdays2015-example/</a>
+          <a style="font-size: 30px" href="http://janschaefer.github.io/xpdays2015-example"><h4>janschaefer.github.io/xpdays2015-example</h4></a>
         </section>
         <section style="text-align:center">
               <h2>Klassisches BDD</h2>
@@ -1113,6 +1113,7 @@ public SELF a_book() { ... }</code></pre>
      <h3>@JanSchfr</h3>
      <a href="http://jgiven.org"><h3>jgiven.org</h3></a>
      <a href="https://github.com/TNG/JGiven"><h3>github.com/TNG/JGiven</h3></a>
+     <a href="https://janschaefer.github.io/xpdays2015-slides/"><h3>janschaefer.github.io/xpdays2015-slides</h3></a>
      <p style="margin-top:50px">
      <a href="http://tngtech.com"><img  style="margin-bottom:20px; margin-top:-10px; height:40px;" src="img/tng.svg" /></a>
      </p>
