add additional links to HTML report examples

--- a/index.html
+++ b/index.html
@@ -412,7 +412,11 @@ public class OrderTest extends SimpleScenarioTest&lt;StepDefs&gt; {
         <section>
           <h2>HTML5-App</h2>
           <a target="_blank" href="examplereport/index.html"><img height="400px" src="img/jgivenhtml5app2.png"/></a>
-          <a style="font-size: 30px" href="http://janschaefer.github.io/xpdays2015-example"><h4>janschaefer.github.io/xpdays2015-example</h4></a>
+            <ul>
+              <li><a style="font-size: 30px" href="http://jgiven.org/jgiven-report/html5/">jgiven.org/jgiven-report/html5/</a> <a href="file:///home/jan/git/github/jgiven/jgiven-tests/build/reports/jgiven/html5/index.html" style="font-size:20px">(Local)</a></li>
+              <li><a style="font-size: 30px" href="http://janschaefer.github.io/xke-jgiven/">janschaefer.github.io/xke-jgiven/</a> <a href="file:///home/jan/git/github/xke-jgiven/index.html" style="font-size:20px">(Local)</a></li>
+              <li><a style="font-size: 30px" href="http://janschaefer.github.io/xpdays2015-example">janschaefer.github.io/xpdays2015-example</a></li>
+            </ul>
         </section>
         <section style="text-align:center">
               <h2>Klassisches BDD</h2>
